--- a/www/package.json
+++ b/www/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.0.2",
+    "@clerk/nextjs": "^6.1.3",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -45,8 +45,9 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.11",
     "input-otp": "^1.2.4",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "^0.454.0",
     "next": "15.0.1",
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-69d4b800-20241021",
