--- a/www/package.json
+++ b/www/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.1.3",
+    "@clerk/themes": "^2.1.41",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "5.21.1",
     "@radix-ui/react-accordion": "^1.2.1",
